# machine-learning-on-topological-images-to-classify-turbulence-in-wind-farms

./: 37_create_animation.py  37_turbulence_persistence_images_blog.md  README.md  article.md  config.yaml  pyproject.toml  turbine_degradation_laplacian.py  turbulence_classification.py
